Fixed deprecation warning cli class